0.8.0/_sources/generated/statsmodels.regression.mixed_linear_model.MixedLM.rst.txt
statsmodels.regression.mixed_linear_model.MixedLM
=================================================

.. currentmodule:: statsmodels.regression.mixed_linear_model

.. autoclass:: MixedLM

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
    
    
      ~MixedLM.fit
    
    
      ~MixedLM.fit_regularized
    
    
      ~MixedLM.from_formula
    
    
      ~MixedLM.get_fe_params
    
    
      ~MixedLM.get_scale
    
    
      ~MixedLM.group_list
    
    
      ~MixedLM.hessian
    
    
      ~MixedLM.information
    
    
      ~MixedLM.initialize
    
    
      ~MixedLM.loglike
    
    
      ~MixedLM.predict
    
    
      ~MixedLM.score
    
    
      ~MixedLM.score_full
    
    
      ~MixedLM.score_sqrt
    
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~MixedLM.endog_names
      ~MixedLM.exog_names
   
   