v0.10.0rc2/_sources/generated/statsmodels.regression.mixed_linear_model.MixedLM.rst.txt
statsmodels.regression.mixed\_linear\_model.MixedLM
===================================================

.. currentmodule:: statsmodels.regression.mixed_linear_model

.. autoclass:: MixedLM

   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         MixedLM.fit
         MixedLM.fit_regularized
         MixedLM.from_formula
         MixedLM.get_distribution
         MixedLM.get_fe_params
         MixedLM.get_scale
         MixedLM.group_list
         MixedLM.hessian
         MixedLM.information
         MixedLM.initialize
         MixedLM.loglike
         MixedLM.predict
         MixedLM.score
         MixedLM.score_full
         MixedLM.score_sqrt



   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         MixedLM.endog_names
         MixedLM.exog_names

